--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-loader": "^4.0.0",
     "webpack-dev-server": "^3.10.3"
   },
   "scripts": {
-    "start": "./bin/webpack-dev-server"
+    "start": "./bin/webpack-dev-server",
+    "lint": "eslint app/client"
   }
 }
