--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,3 +14,12 @@ Style/Encoding:
 
 Style/ExpandPathArguments:
   Enabled: false
+
+Metrics/AbcSize:
+  Enabled: false
+
+Style/ClassAndModuleChildren:
+  Enabled: false
+
+Style/Documentation:
+  Enabled: false
