update methods to delete income and show income payslips

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -19,7 +19,7 @@ Layout/SpaceInsideArrayLiteralBrackets:
 # Cop supports --auto-correct.
 # Configuration parameters: AutoCorrect, AllowHeredoc, AllowURI, URISchemes, IgnoreCopDirectives, IgnoredPatterns.
 # URISchemes: http, https
-Metrics/LineLength:
+Layout/LineLength:
   Max: 154
 
 # Offense count: 1
